--- a/Organizze/app/src/main/AndroidManifest.xml
+++ b/Organizze/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Organizze"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CadastroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Intro">
