--- a/Organizze/app/src/main/AndroidManifest.xml
+++ b/Organizze/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.Organizze"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PrincipalActivity"
+            android:exported="false"
+            android:label="@string/title_activity_principal"
+            android:theme="@style/Theme.Organizze" />
+        <activity
             android:name=".activity.CadastroActivity"
             android:exported="false" />
         <activity
