--- a/Organizze/app/src/main/AndroidManifest.xml
+++ b/Organizze/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.Organizze"
         tools:targetApi="31">
         <activity
+            android:name=".activity.DespesasActivity"
+            android:exported="false"
+            android:theme="@style/despesaTheme"/>
+        <activity
+            android:name=".activity.ReceitasActivity"
+            android:theme="@style/receitaTheme"
+            android:exported="false" />
+        <activity
             android:name=".activity.PrincipalActivity"
             android:exported="false"
             android:label="@string/title_activity_principal"
