WhatsApp - Add solicitação permissao camera e galeria

--- a/WhatsApp/app/src/main/AndroidManifest.xml
+++ b/WhatsApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Solicitando permissão de uso da galeria -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- Solicitando permissão de uso da camera -->
+<!--    <uses-feature android:name="android.hardware.camera" android:required="false" />-->
+<!--    <uses-permission android:name="android.permission.CAMERA" />-->
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
