WhatsApp - Criando navegação para activity de criar grupos

--- a/WhatsApp/app/src/main/AndroidManifest.xml
+++ b/WhatsApp/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
         android:theme="@style/Base.Theme.WhatsApp"
         tools:targetApi="31">
         <activity
+            android:name=".activity.GrupoActivity"
+            android:exported="false"
+            android:parentActivityName=".activity.MainActivity"/>
+        <activity
             android:name=".activity.ChatActivity"
-            android:windowSoftInputMode="adjustResize"
             android:exported="false"
             android:label="@string/title_activity_chat"
-            android:parentActivityName=".activity.MainActivity" />
+            android:parentActivityName=".activity.MainActivity"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".activity.ConfiguracoesActivity"
             android:exported="false"
@@ -30,11 +34,9 @@
             android:name=".activity.MainActivity"
             android:exported="false"
             android:theme="@style/Base.Theme.WhatsApp">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".activity.CadastroActivity"
