--- a/WhatsApp/app/src/main/AndroidManifest.xml
+++ b/WhatsApp/app/src/main/AndroidManifest.xml
@@ -17,9 +17,13 @@
         android:theme="@style/Base.Theme.WhatsApp"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CadastroGrupoActivity"
+            android:exported="false"
+            android:parentActivityName=".activity.GrupoActivity"/>
+        <activity
             android:name=".activity.GrupoActivity"
             android:exported="false"
-            android:parentActivityName=".activity.MainActivity"/>
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.ChatActivity"
             android:exported="false"
