--- a/OrderExpressApp/app/src/main/AndroidManifest.xml
+++ b/OrderExpressApp/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Base.Theme.LayoutIdeia"
         tools:targetApi="31">
         <activity
+            android:name=".activity.SplashScreenActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.MeusPedidosActivity"
             android:exported="false"
-            android:parentActivityName=".activity.MainActivity"/>
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.CadastroActivity"
             android:exported="false"
