--- a/OrderExpressApp/app/src/main/AndroidManifest.xml
+++ b/OrderExpressApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Base.Theme.LayoutIdeia"
         tools:targetApi="31">
         <activity
+            android:name=".activity.CadastrarProdutoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MeusProdutosActivity"
+            android:exported="false"
+            android:parentActivityName=".activity.MainActivity" />
+        <activity
             android:name=".activity.MeusPedidosActivity"
             android:exported="false"
             android:parentActivityName=".activity.MainActivity" />
