--- a/OrderExpressApp/app/src/main/AndroidManifest.xml
+++ b/OrderExpressApp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.CadastrarProdutoActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".activity.MeusProdutosActivity"/>
         <activity
             android:name=".activity.MeusProdutosActivity"
             android:exported="false"
